# IRKit

./: .gitignore  Dockerfile  README.md  benchmark_results.txt  docker-compose.yml  irkit_implementation_guide.md  irkit_tutorial.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
cli/: main.py
demo/: index.html  package-lock.json  package.json
demo/src/: App.tsx  index.css
demos/: final_demo.py
irkit/: __init__.py
irkit/core/: cache.py  engine.py  evaluation.py  index.py  metrics.py  profiler.py  quantization.py  sharding.py
irkit/embedders/: __init__.py  base.py  huggingface.py  openai.py  sentence_transformers.py
irkit/rankers/: __init__.py  base.py  bm25.py  hybrid.py  reranker.py  semantic.py
irkit/serve/: api.py
irkit/sources/: __init__.py  arxiv.py  base.py  custom.py  directory.py  factory.py  file.py  news.py  web.py  wikipedia.py
irkit/storage/: __init__.py  base.py  memory.py  redis.py
scripts/: benchmark_cache.py  benchmark_internal.py  benchmark_quantization.py  benchmark_sources.py  evaluate_quality.py
tests/: dummy_data.csv  test_profiler.py  test_quantization.py
tests/integration/: test_index_engine.py
tests/unit/: test_bm25.py  test_hybrid.py  test_sharding.py
